fix few pixel misalignment in header

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -131,7 +131,7 @@ header img.icon {
 
 header ul.icons {
   list-style:none;
-  padding:0;
+  padding-left:2px;
   width:230px;
 }
 
